--- a/src/scss/_section-intro.scss
+++ b/src/scss/_section-intro.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   background-color: v.$color-secondary;
+  padding-top: 0; // dirty hack
 }
 
 .logo {
@@ -14,25 +15,23 @@
   min-width: 300px;
   // max-height: 500px;
   width: 80%;
-
-  //   border: solid 1px red;
-
-  @include mx.screen-m {
-    margin-left: v.$nav-offset;
-  }
+  justify-self: flex-start;
 }
 
 .text-greet {
   color: v.$color-tertiary;
   font-family: v.$font-overpass;
-  font-size: 3rem;
-  text-align: center;
-
-  @include mx.screen-m {
-    margin-left: v.$nav-offset;
-  }
+  font-size: v.$font-size-l;
 
   @include mx.screen-s {
-    font-size: 4rem;
+    font-size: v.$font-size-xl;
+    margin-bottom: 64px;
+  }
+}
+
+.text-appear {
+  &--text-greet-name {
+    color: v.$color-primary;
+    margin-left: 40%;
   }
 }
