--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,18 @@
 $color-primary: #ff4655;
 $color-secondary: #0f1923;
 $color-tertiary: #e5e5e5;
+
+$nav-offset: 10%;
+$nav-max-height: 72px;
+
+$width-s: 576px;
+$width-m: 768px;
+$width-l: 1024px;
+
+$font-roboto: "Roboto", sans-serif;
+$font-overpass: "Overpass", sans-serif;
+$font-open-sans: "Open Sans", sans-serif;
+
+$font-size-m: 2.2rem;
+$font-size-l: 3rem;
+$font-size-xl: 4rem;
