--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,9 @@
-@use "_nav";
+@use "variables" as v;
+@use "text-appear";
+@use "nav";
+@use "section";
+@use "section-intro";
+@use "section-about";
 
 * {
   margin: 0;
@@ -8,5 +13,17 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: v.$font-open-sans;
+  font-size: 16px;
+  background-color: yellowgreen;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: v.$color-tertiary;
+  opacity: 0.5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: v.$color-primary;
 }
