--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -1,18 +1,25 @@
+@use "variables" as v;
+@use "mixins" as mx;
+
 .full-page {
   min-height: 100%;
   height: 100%;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  background-color: v.$color-tertiary;
+  z-index: -1;
 
   &__section {
     height: 100%;
-    background-color: whitesmoke;
-    /*   border: 1px solid black; */
-    // justify-content: center;
-    // align-items: center;
     scroll-snap-align: start;
     scroll-snap-stop: always;
     border-bottom: solid red 2px;
+    padding-top: v.$nav-max-height;
+
+    @include mx.screen-m {
+      padding-left: v.$nav-offset;
+      padding-top: 0;
+    }
   }
 }
