--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  max-height: v.$nav-max-height;
   position: fixed;
   top: 0;
   background-color: v.$color-secondary;
@@ -106,6 +107,10 @@
     & #{$this}__link {
       width: 50%;
       padding: 24px;
+
+      &:hover {
+        color: v.$color-primary;
+      }
     }
   }
 
