--- a/src/scss/_section-skills.scss
+++ b/src/scss/_section-skills.scss
@@ -2,8 +2,11 @@
 @use "mixins" as mx;
 
 .full-page__section--skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   position: relative;
-  padding-left: 36px;
+  // padding-left: 36px;
 
   @include mx.screen-m {
     padding-left: v.$nav-offset;
@@ -14,7 +17,8 @@
   &--text-skills {
     max-width: 796px;
     font-size: v.$font-size-m;
-    margin-top: 36px;
+    margin-top: 8px;
+    margin-left: 16px;
 
     @include mx.screen-s {
       font-size: v.$font-size-l;
@@ -27,10 +31,144 @@
   }
 }
 
-.wrapper-skills {
-  height: 80%;
+.skills {
+  position: relative;
+  flex-grow: 1;
   border: solid 1px gray;
-  @include mx.screen-m {
-    margin-left: 96px;
+
+  &__skill-description {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 40%;
+    padding-left: 16px;
+    overflow: hidden;
+  }
+
+  &__skill-names {
+    width: fit-content;
+
+    position: relative;
+  }
+
+  &__skill-name {
+    display: none;
+    // position: absolute;
+    font-size: v.$font-size-m;
+    top: 0;
+    left: 0;
+
+    &--web {
+      display: initial;
+    }
+  }
+
+  &__skill-texts {
+    width: 100%;
+    height: 40%;
+    position: relative;
+    margin-top: 8px;
+    border-left: solid 4px v.$color-primary;
+    overflow: hidden;
+  }
+
+  &__skill-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-left: 8px;
+    padding-right: 4px;
+    transform: translateX(100%);
+
+    &--web {
+      transform: translateX(0);
+    }
+  }
+
+  &__tools {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 40%;
+    background-color: v.$color-secondary;
+    clip-path: polygon(0 40%, 100% 0, 100% 100%, 0 100%);
+  }
+
+  &__tools-label {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 8px;
+    margin-right: 16px;
+    font-size: v.$font-size-m;
+    color: v.$color-tertiary;
+  }
+
+  &__tools-containers {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  &__tools-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 32px;
+    transform: translateX(100%);
+
+    &--web {
+      transform: translateX(0);
+    }
+  }
+
+  &__tools-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    width: 64px;
+    height: 60%;
+    border: solid 1px red;
+
+    @for $i from 0 through 3 {
+      &:nth-child(#{$i + 1}) {
+        transform: translateY(-$i * 10%);
+      }
+    }
+  }
+
+  &__tool-item {
+    width: 42px;
+    height: 42px;
+    background-color: red;
+    float: right;
+  }
+
+  &__nav-btn-container {
+    width: fit-content;
+    position: absolute;
+    bottom: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    background: transparent;
+  }
+
+  &__nav-btn {
+    width: 28px;
+    height: 4px;
+    border: solid 0.5px v.$color-primary;
+    float: left;
+    margin: 4px;
+    cursor: pointer;
   }
 }
