--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,10 +9,11 @@ $width-s: 576px;
 $width-m: 768px;
 $width-l: 1024px;
 
-$font-roboto: "Roboto", sans-serif;
-$font-overpass: "Overpass", sans-serif;
-$font-open-sans: "Open Sans", sans-serif;
+$font-rz-regular: "rz-regular";
+$font-rz-bold: "rz-bold";
 
-$font-size-m: 2.2rem;
-$font-size-l: 3rem;
-$font-size-xl: 4rem;
+$font-size-s: 1.1rem;
+$font-size-m: 1.5rem;
+$font-size-l: 2.2rem;
+$font-size-xl: 2.8rem;
+$font-size-xxl: 3.6rem;
