--- a/src/scss/_section-intro.scss
+++ b/src/scss/_section-intro.scss
@@ -13,18 +13,16 @@
 .logo {
   max-width: 500px;
   min-width: 300px;
-  // max-height: 500px;
   width: 80%;
   justify-self: flex-start;
 }
 
 .text-greet {
   color: v.$color-tertiary;
-  font-family: v.$font-overpass;
-  font-size: v.$font-size-l;
+  font-size: v.$font-size-xl;
 
   @include mx.screen-s {
-    font-size: v.$font-size-xl;
+    font-size: v.$font-size-xxl;
     margin-bottom: 64px;
   }
 }
