--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,9 +15,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: v.$font-open-sans;
+  font-family: v.$font-rz-regular;
   font-size: 16px;
-  background-color: yellowgreen;
 }
 
 ::-webkit-scrollbar {
@@ -28,4 +27,8 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: v.$color-primary;
+}
+
+.hide {
+  display: none;
 }
