--- a/src/scss/_section-projects.scss
+++ b/src/scss/_section-projects.scss
@@ -1,8 +1,8 @@
 @use "variables" as v;
 @use "mixins" as mx;
 
-.full-page__section--projects {
-}
+// .full-page__section--projects {
+// }
 
 .text-appear {
   &--text-projects {
@@ -21,98 +21,116 @@
   }
 }
 
-.project-titles {
-  display: flex;
-  flex-direction: column;
-  font-family: v.$font-rz-bold;
-  font-size: v.$font-size-xxl;
-  margin-top: 64px;
-
-  &__title {
-    margin: 8px 0;
-  }
+.label-drag {
+  position: absolute;
+  left: 0;
+  bottom: 16px;
+  font-size: v.$font-size-xs;
+  color: v.$color-primary;
+  transform: rotate(-90deg);
 
   @include mx.screen-m {
-    margin-left: 126px;
-  }
-}
-
-.projects {
-  display: grid;
-  height: 92%;
-  padding: 16px 64px 8px 64px;
-  grid-template-rows: 1fr 1fr;
-  grid-auto-flow: column;
-  gap: 32px 184px;
-  cursor: grab;
-  overflow: hidden;
-  // border: solid 1px red;
-
-  @include mx.screen-m {
-    margin-left: 126px;
+    left: unset;
+    bottom: unset;
+    right: 0;
+    top: 32px;
   }
 }
 
 .project {
-  height: 70%;
+  position: relative;
+  height: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 32px;
+  align-items: flex-start;
+  margin-top: 16px;
   overflow: hidden;
-
-  // background-color: v.$color-secondary;
 
   @include mx.screen-m {
     margin-left: 126px;
+    margin-top: 32px;
+    align-items: center;
   }
 
   &__list-wrapper {
-    position: relative;
-    // width: 45%;
-    width: 90%;
-    height: 90%;
-    border: solid 1px red;
+    position: absolute;
+    right: 8px;
+    bottom: 16px;
+    // width: 50%;
+    width: 55%;
+    height: 55%;
+    min-height: 256px;
+    // border: solid 1px red;
     overflow: hidden;
+    z-index: 10;
 
     cursor: grab;
 
     &.grabbing {
       cursor: grabbing;
     }
+
+    @include mx.screen-m {
+      position: relative;
+      width: 50%;
+      height: 90%;
+    }
   }
 
   &__list-item-pos {
     position: absolute;
     height: 2px;
-    top: 30%;
+    top: 25%;
     width: 40%;
-    // left: 0;
-    right: 0;
-    // border: solid 1px red;
+    left: 0;
     background-color: v.$color-primary;
+    z-index: 10;
+
+    @include mx.screen-m {
+      right: 0;
+      left: unset;
+    }
   }
 
   &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     position: absolute;
     top: 0;
-    left: 0;
+    left: unset;
+    right: 0;
     width: 100%;
     height: fit-content;
     // border: solid 1px blue;
+
+    @include mx.screen-m {
+      align-items: flex-start;
+      left: 0;
+      right: unset;
+    }
   }
 
   &__title {
     width: fit-content;
+    position: relative;
     font-family: v.$font-rz-bold;
-    font-size: v.$font-size-l;
-    padding: 8px 0px;
-    border: solid 1px red;
+    font-size: v.$font-size-m;
+    padding: 8px 8px;
+    // border: solid 1px red;
+    text-align: right;
     z-index: 2;
 
     &.selected {
-      color: v.$color-primary;
+      color: v.$color-tertiary;
+      background-color: v.$color-secondary;
+    }
+
+    @include mx.screen-m {
+      width: fit-content;
+      font-size: v.$font-size-l;
+      text-align: left;
     }
 
     @include mx.screen-l {
@@ -121,52 +139,80 @@
   }
 
   &__desc {
-    display: none;
+    // display: none;
     position: relative;
     width: 50%;
     max-width: 396px;
-    min-width: 356px;
-    height: 400px;
+    min-width: 296px;
     background-color: v.$color-primary;
-    padding: 64px 16px 32px 16px;
+    padding: 42px 16px 32px 16px;
     color: v.$color-tertiary;
+    margin-left: 24px;
     // border: solid 1px red;
+
+    @include mx.screen-m {
+      width: 45%;
+      min-height: 356px;
+      margin-left: 0;
+    }
+
+    @include mx.screen-l {
+      padding-top: 64px;
+    }
   }
 
   &__name {
     position: absolute;
     font-family: v.$font-rz-bold;
-    font-size: v.$font-size-l;
+    font-size: v.$font-size-m;
     color: black;
     white-space: nowrap;
     top: 8px;
-    left: -24px;
+    left: -20px;
+
+    @include mx.screen-l {
+      font-size: v.$font-size-l;
+    }
   }
 
   &__about {
     color: v.$color-tertiary;
-    margin-bottom: 42px;
+    margin-bottom: 24px;
     text-indent: 42px;
+
+    @include mx.screen-m {
+      margin-bottom: 42px;
+    }
   }
 
   &__links,
   &__tools {
+    width: 60%;
     padding: 8px 0;
+
+    @include mx.screen-m {
+      width: fit-content;
+    }
   }
 
   &__links-list,
   &__tools-list {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     padding: 2px 0;
   }
 
   &__link {
-    margin-right: 16px;
+    margin-right: 12px;
+
+    @include mx.screen-m {
+      margin-right: 16px;
+    }
 
     a {
-      font-family: v.$font-rz-bold;
+      // font-family: v.$font-rz-bold;
       color: v.$color-tertiary;
 
       &:hover {
@@ -177,7 +223,6 @@
 
   &__tool {
     margin-right: 16px;
-    font-family: v.$font-rz-bold;
   }
 
   &__tools-label,
